--- a/Store 09/tech.html
+++ b/Store 09/tech.html
@@ -29,13 +29,13 @@
 <section id="role">    
  <div class="container">
     <h1>Technician Training - Store 09</h1>
-    <p>Welcome to your custom training page.</p>
+    <p>Select your training from the list below.</p>
 
   <div class="role-buttons">    
-    <a class="button" href="https://go.team1bg.com" target="_blank">BG Training</a>
+    <a class="button" href="BG.html">BG Training</a>
     <a class="button" href="Hunter.html">Hunter Training</a>
     <a class="button" href="TodaysClass.html">Todays Class</a>
-    <a class="button" href="NAPA.html">NAPA Training</a>
+    <a class="button" href="Isolved.html">ISolved Resources</a>
   </div>
 
     <footer>
