--- a/Store 09/Goodyear.html
+++ b/Store 09/Goodyear.html
@@ -59,7 +59,7 @@
 <section id="role">
   <div class="container">
     <h1>Goodyear Training - Store 09</h1>
-    <p>Welcome to the Goodyear Training page.</p>
+    <p>Follow the instructions below to access your Goodyear Training portal.</p>
 
     <div class="cred-box" onclick="copyToClipboard('181863')">
       Nonsig: 181863<br>
