--- a/Store 11/Goodyear.html
+++ b/Store 11/Goodyear.html
@@ -57,8 +57,8 @@
 <section id="role">
   <div class="container">
     <h1>Goodyear Training - Store 11</h1>
-    <p>Welcome to the Goodyear Training page.</p>
-
+    <p>Follow the instructions below to access your Goodyear Training portal.</p>
+      
     <div class="cred-box" onclick="copyToClipboard('187120')">
       Nonsig: 187120<br>
       <small>(Tap to copy)</small>
