--- a/Store 12/Goodyear.html
+++ b/Store 12/Goodyear.html
@@ -59,7 +59,7 @@
 <section id="role">
   <div class="container">
     <h1>Goodyear Training - Store 12</h1>
-    <p>Welcome to the Goodyear Training page.</p>
+    <p>Follow the instructions below to access your Goodyear Training portal.</p>
 
     <div class="cred-box" onclick="copyToClipboard('196818')">
       Nonsig: 196818<br>
