--- a/Store 14/Goodyear.html
+++ b/Store 14/Goodyear.html
@@ -57,7 +57,7 @@
 <section id="role">
   <div class="container">
     <h1>Goodyear Training - Store 14</h1>
-    <p>Welcome to the Goodyear Training page.</p>
+    <p>Follow the instructions below to access your Goodyear Training portal.</p>
 
     <div class="cred-box" onclick="copyToClipboard('197590')">
       Nonsig: 197590<br>
