--- a/Store 15/Goodyear.html
+++ b/Store 15/Goodyear.html
@@ -57,7 +57,7 @@
 <section id="role">
   <div class="container">
     <h1>Goodyear Training - Store 15</h1>
-    <p>Welcome to the Goodyear Training page.</p>
+    <p>Follow the instructions below to access your Goodyear Training portal.</p>
 
     <div class="cred-box" onclick="copyToClipboard('197675')">
       Nonsig: 197675<br>
