--- a/Store 16/Goodyear.html
+++ b/Store 16/Goodyear.html
@@ -59,7 +59,7 @@
 <section id="role">
   <div class="container">
     <h1>Goodyear Training - Store 16</h1>
-    <p>Welcome to the Goodyear Training page.</p>
+    <p>Follow the instructions below to access your Goodyear Training portal.</p>
 
     <div class="cred-box" onclick="copyToClipboard('198469')">
       Nonsig: 198469<br>
