--- a/Store 18/Goodyear.html
+++ b/Store 18/Goodyear.html
@@ -57,7 +57,7 @@
 <section id="role">
   <div class="container">
     <h1>Goodyear Training - Store 18</h1>
-    <p>Follow the instructions below to create a Goodyear account and access required training.</p>
+    <p>Follow the instructions below to access your Goodyear Training portal.</p>
 
     <div class="cred-box" onclick="copyToClipboard('187472')">
       Nonsig: 187472<br>
