--- a/Store 21/Goodyear.html
+++ b/Store 21/Goodyear.html
@@ -57,7 +57,7 @@
 <section id="role">
   <div class="container">
     <h1>Goodyear Training - Store 21</h1>
-    <p>Follow the instructions below to create a Goodyear account and access required training.</p>
+    <p>Follow the instructions below to access your Goodyear Training portal.</p>
 
     <div class="cred-box" onclick="copyToClipboard('178237')">
       Nonsig: 178237<br>
