--- a/Store 22/Goodyear.html
+++ b/Store 22/Goodyear.html
@@ -50,14 +50,13 @@
   <a href="../index.html">Main Dashboard</a>
   <a href="../Store%2022/manager.html">Manager Courses</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
-  <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
   <a href="https://jensentireandauto.com/" target="_blank">Retail Site</a>
 </nav>
     
 <section id="role">
   <div class="container">
     <h1>Goodyear Training - Store 22</h1>
-    <p>Follow the instructions below to create a Goodyear account and access required training.</p>
+    <p>Follow the instructions below to access your Goodyear Training portal.</p>
 
     <div class="cred-box" onclick="copyToClipboard('171499')">
       Nonsig: 171499<br>
