--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -47,14 +47,13 @@
   <a href="../index.html">Main Dashboard</a>
   <a href="../Store%2001/manager.html">Manager Courses</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
-  <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
   <a href="https://jensentireandauto.com" target="_blank">Retail Site</a>
 </nav>
     
 <section id="role">
   <div class="container">
     <h1>Continental Training - Store 01</h1>
-    <p>Follow the instructions below to create a Continental account and access required training.</p>
+    <p>Follow the instructions below to access your Continental Training portal.</p>
 
     <div class="grid-container">
       <div class="cred-box" onclick="copyToClipboard('Jensen Tire & Auto #01')">
