--- a/Store 07/Conti.html
+++ b/Store 07/Conti.html
@@ -53,7 +53,7 @@
 <section id="role">
   <div class="container">
     <h1>Continental Training - Store 07</h1>
-    <p>Welcome to the Continental Training page.</p>
+    <p>Follow the instructions below to access your Continental Training portal.</p>
       
     <div class="grid-container">
       <div class="cred-box" onclick="copyToClipboard('Jensen Tire & Auto #7')">
