--- a/Store 10/Conti.html
+++ b/Store 10/Conti.html
@@ -45,19 +45,16 @@
 
 <nav id="nav-menu">
   <a href="../index.html">Main Dashboard</a>
-  <a href="../Store%2010/select-role.html">Role selection</a>
   <a href="../Store%2010/manager.html">Manager Courses</a>
-  <a href="../Store%2010/tech.html">Technician Courses</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
-  <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
   <a href="https://jensentireandauto.com" target="_blank">Retail Site</a>
 </nav>
     
 <section id="role">
   <div class="container">
     <h1>Continental Training - Store 10</h1>
-    <p>Welcome to the Continental Training page.</p>
-
+    <p>Follow the instructions below to access your Continental Training portal.</p>
+      
     <div class="grid-container">
       <div class="cred-box" onclick="copyToClipboard('Jensen Tire & Auto #10')">
         Store Name: Jensen Tire & Auto #10<br><small>(Tap to copy)</small>
