--- a/Store 01/Hunter.html
+++ b/Store 01/Hunter.html
@@ -56,7 +56,21 @@
 <section id="role">
   <div class="container">
     <h1>Hunter Training - Store 01</h1>
-    <p>Use the credentials provided in the initial email to log in.</p>
+    <p>Use your assigned credentials below to log in.</p>
+
+  <div id="credsWrapper" class="grid-container">
+    <div id="hunterUserBox" class="cred-box" onclick="copyToClipboard(this.dataset.copy)">
+      Username: <span id="hunterUserText">Loading…</span>
+       <small>(Tap to copy)</small>
+    </div>
+  <div id="hunterPassBox" class="cred-box" onclick="copyToClipboard(this.dataset.copy)">
+      Password: <span id="hunterPassText">Loading…</span>
+       <small>(Tap to copy)</small>
+    </div>
+  </div>
+  <div id="noCreds" class="muted" style="display:none; margin-top:10px;">
+    No Hunter credentials found for your account. Please contact IT.
+  </div>
 
   <div class="training-buttons">    
     <a class="button" href="https://university.hunter.com/learn" target="_blank">Launch Hunter Training</a>
@@ -121,7 +135,7 @@
       const userBox = document.getElementById("hunterUserBox");
       const passBox = document.getElementById("hunterPassBox");
       const userText= document.getElementById("hunterUserText");
-      const passText= document.getElementById("huterPassText");
+      const passText= document.getElementById("hunterPassText");
 
       if (!creds || !creds.username || !creds.password) {
         document.getElementById("noCreds").style.display = "block";
