--- a/Store 04/spiff.html
+++ b/Store 04/spiff.html
@@ -17,6 +17,7 @@
     
 <nav id="nav-menu">
   <a href="../index.html">Main Dashboard</a>
+  <a href="../Store%2004/manager.html">Manager Courses</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
   <a href="https://jensentireandauto.com" target="_blank">Retail Site</a>
 </nav>
