--- a/Store 10/manager.html
+++ b/Store 10/manager.html
@@ -24,7 +24,7 @@
 <section id="role">    
  <div class="container">
     <h1>Manager Training - Store 10</h1>
-    <p>Welcome to your custom training page.</p>
+    <p>Select your training from the list below.</p>
 
 <div class="role-grid">
   <a class="button" href="Conti.html">Continental Training
