--- a/Store 07/spiff.html
+++ b/Store 07/spiff.html
@@ -25,7 +25,7 @@
 <section id="role">
   <div class="container">
     <h1>Spiffs - Store 07</h1>
-    <p>Welcome to the Spiff reporting page.</p>
+    <p>Choose the reward sites below to create an account.</p>
   
   <div class="training-buttons">    
     <a class="button" href="https://www.Gyrewardsplus.com" target="_blank">Goodyear Rewards</a>
