--- a/Store 17/spiff.html
+++ b/Store 17/spiff.html
@@ -19,14 +19,13 @@
   <a href="../index.html">Main Dashboard</a>
   <a href="../Store%2017/manager.html">Manager Courses</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
-  <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
   <a href="https://jensentireandauto.com" target="_blank">Retail Site</a>
 </nav>
     
 <section id="role">
   <div class="container">
     <h1>Spiffs - Store 17</h1>
-    <p>Welcome to the Spiff reporting page.</p>
+    <p>Choose the reward sites below to create an account.</p>
   
   <div class="training-buttons">    
     <a class="button" href="https://www.Gyrewardsplus.com" target="_blank">Goodyear Rewards</a>
