--- a/Store 17/Hunter.html
+++ b/Store 17/Hunter.html
@@ -136,7 +136,7 @@
       const userBox = document.getElementById("hunterUserBox");
       const passBox = document.getElementById("hunterPassBox");
       const userText= document.getElementById("hunterUserText");
-      const passText= document.getElementById("huterPassText");
+      const passText= document.getElementById("hunterPassText");
 
       if (!creds || !creds.username || !creds.password) {
         document.getElementById("noCreds").style.display = "block";
