--- a/Store 02/BG.html
+++ b/Store 02/BG.html
@@ -60,7 +60,10 @@
     <br>
     <br>
     You have 24Hrs from when you receive the link to register.<br>
-    If missed please request an invite using the button below.</p>
+    If missed please request an invite using the button below.
+    <br>
+    <br>
+    </p>
 
   <div class="training-buttons">    
     <a class="button" href="https://go.team1bg.com" target="_blank">Launch BG Training</a>
@@ -254,7 +257,7 @@
         setTimeout(() => {
           document.getElementById("thank-you-request").style.display = "none";
           closeRequest();
-        }, 2000);
+        }, 4000);
       } else {
         alert("Submission failed. Please try again.");
       }
