--- a/Store 02/BG.html
+++ b/Store 02/BG.html
@@ -60,7 +60,7 @@
     <br>
     <br>
     You have 24Hrs from when you receive the link to register.<br>
-    If missed please request an invite using the button below.
+    If missed, please request an invite using the button below.
     <br>
     <br>
     </p>
