--- a/Store 02/BG.html
+++ b/Store 02/BG.html
@@ -81,9 +81,11 @@
       </div>
     </p>
 
+    <p class="instructions">      
     <div class="training-buttons">    
         <a class="button" onclick="openRequest()">Request BG Invite</a>
     </div>
+  </p>
 
     <footer style="margin-top: 40px;">
         Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
