--- a/Store 18/BG.html
+++ b/Store 18/BG.html
@@ -76,7 +76,7 @@
 
     <p class="instructions">
       <div class="training-buttons">    
-        <a class="button" href="https://www.youtube.com/watch?v=fbVVn15dOJs" target="_blank">Product Knowledge Video</a>
+        <a class="button" href="https://www.youtube.com/playlist?list=PLtiLcHwsO99shZwiZE5nyWOhJPPS084oD" target="_blank">Product Knowledge Playlist</a>
       </div>
     </p>
 
