--- a/Store 02/manager.html
+++ b/Store 02/manager.html
@@ -43,6 +43,8 @@
   </a>
   <a class="button" href="spiff.html">Rewards/ Spiffs
   </a>
+  <a class="button" href="../JTAPhone.pdf" target="_blank">Phone Script
+  </a>
 </div>
 
 
