--- a/Store 01/Hunter.html
+++ b/Store 01/Hunter.html
@@ -78,7 +78,7 @@
       
     <p class="instructions">
       <div class="training-buttons">    
-        <a class="button" href="../Hunterinstruction.html" target="_blank">Instructions</a>
+        <a class="button" href="../Construction.html" target="_blank">Instructions</a>
       </div>
     </p>
 
